--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc"
   },
   "dependencies": {
     "next": "14.1.0",
@@ -24,9 +25,9 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
-  "packageManager": "yarn@4.0.0",
+  "packageManager": "yarn@4.0.2",
   "volta": {
     "node": "20.9.0",
-    "yarn": "4.0.0"
+    "yarn": "4.0.2"
   }
 }
